--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900" />
+    <link href="/src/bootstrap-5.3.3-dist/css/bootstrap.css" rel="stylesheet" crossorigin="anonymous">
     <title>app</title>
   </head>
-  <body>
+  <body style="background-color: black; color: white;">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="/src/bootstrap-5.3.3-dist/js/bootstrap.js" crossorigin="anonymous"></script>
   </body>
 </html>
