--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="/src/bootstrap-5.3.3-dist/css/bootstrap.css" rel="stylesheet" crossorigin="anonymous">
     <title>app</title>
   </head>
-  <body style="background-color: black; color: white;">
+  <body style="background-color: #0a0a0a; color: white;">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
     <script src="/src/bootstrap-5.3.3-dist/js/bootstrap.js" crossorigin="anonymous"></script>
