--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900" />
     <link href="/src/bootstrap-5.3.3-dist/css/bootstrap.css" rel="stylesheet" crossorigin="anonymous">
-    <title>app</title>
+    <title>IT Проект</title>
   </head>
   <body style="background-color: #0a0a0a; color: white;">
     <div id="app"></div>
