--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900" />
-    <link href="/src/bootstrap-5.3.3-dist/css/bootstrap.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <title>IT Проект</title>
   </head>
   <body style="background-color: #0a0a0a; color: white;">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <script src="/src/bootstrap-5.3.3-dist/js/bootstrap.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   </body>
 </html>
